# swaylock-plugin

./: .gitignore  README.md  main.c  meson.build
.copr/: Makefile
.github/workflows/: ci.yml  copr-release.yml  deb.yml  lint.yml  release.yml
contrib/: build-env.sh
contrib/debian/: README.md  changelog  control  copyright  install  rules  swaylock-plugin-screensaver.docs  swaylock-plugin-screensaver.install  swaylock-plugin.install
contrib/debian-windowtolayer/: README.md  fetch-source.sh
contrib/debian-windowtolayer/debian/: changelog  control  copyright  rules
contrib/rpm/: README.md  make-srpm.sh  swaylock-plugin.spec  windowtolayer.spec
contrib/screensaver/: README.md  swaylock-screensaver  swaylock-screensaver-select  swaylock-screensaver-shots
docs/: rpm-copr-packaging-plan.md
docs/adr/: 0001-distribute-lockscreen-via-copr.md  0002-package-windowtolayer-tracking-upstream.md  0003-tokenless-build-and-release-pipeline.md  0004-fork-versioning-and-release-safety.md  README.md
subprojects/: wayland-protocols.wrap
